# Plan.Locale

./: CMakeLists.txt  README.md  cApp.cpp  cApp.h  cMain.cpp  cMain.h  camera.cpp  camera.hpp  client.cpp  client.hpp  config.cpp  config.hpp  login.cpp  login.hpp  main.cpp  networking.cpp  networking.hpp  screenCapturing.cpp  screenCapturing.hpp  server.cpp  server.h  server.hpp  soundIO.cpp  soundIO.hpp  user.conf  utils.hpp
.zed/: debug.json
